GreatStack  eduford web 課程 => web header 內容文字 + 紅色按鈕

--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -35,6 +35,23 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- 首頁 網頁標頭 內 之 說明文字 
+            => div text-box 內裝文字, 如下三種元素:
+            1. h1 標頭
+            2. p 段落說明文字
+            3. a href .hero-btn 紅色按鈕, 滑鼠移入產生顏色
+        -->
+        <div class="text-box">
+            <h1>大標題大標題大標題</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <br>
+                Dolore labore ab enim repudiandae ipsum voluptas sunt nihil dicta molestias! 
+            </p>
+            <a href="" class="hero-btn">我是紅色按鈕</a>
+        </div>
+
      </div>
 
 </body>
