--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+
+    <!-- google font 文字 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+
+    <!-- bootstrap 提供之 icon 
+        https://icons.getbootstrap.com/?q=close
+     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>eduford</title>
 </head>
 <body>
     
     <!-- 
-        header ?
+        一,header ?
         1. 新增一個 (div)section.header 的物件
         2. 使用 nav 包覆如下 兩項目:
         => 3. a href 超連結 包覆 圖片
@@ -24,8 +35,13 @@
             <a href="./index.html">
                 <img src="./images/logo.png" alt="">
             </a>
-            <!-- 上方導覽列 之 選項 -->
+            <!-- 上方導覽列 之 選項 
+                三, 要思考 該 導覽列 開啟 與 關閉 位置
+                <i class="bi bi-list"></i>
+                <i class="bi bi-x"></i>
+            -->
             <div class="nav-list">
+                <i class="bi bi-x"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -34,9 +50,10 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="bi bi-list"></i>
         </nav>
 
-        <!-- 首頁 網頁標頭 內 之 說明文字 
+        <!-- 二, 首頁 網頁標頭 內 之 說明文字 
             => div text-box 內裝文字, 如下三種元素:
             1. h1 標頭
             2. p 段落說明文字
