--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -36,12 +36,13 @@
                 <img src="./images/logo.png" alt="">
             </a>
             <!-- 上方導覽列 之 選項 
+            
                 三, 要思考 該 導覽列 開啟 與 關閉 位置
                 <i class="bi bi-list"></i>
                 <i class="bi bi-x"></i>
             -->
-            <div class="nav-list">
-                <i class="bi bi-x"></i>
+            <div class="nav-list" id="nav-list">
+                <i class="bi bi-x" onclick="hidenMenu()"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -50,7 +51,7 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="bi bi-list"></i>
+            <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
 
         <!-- 二, 首頁 網頁標頭 內 之 說明文字 
@@ -70,6 +71,25 @@
         </div>
 
      </div>
+
+     <!-- 四, js 顯示,隱藏 右側選單 
+        1. 使用 onclick 觸發事件, 取得 id = nav-list 元素
+        2. hidenMenu(), showMenu() 隱藏 與呈現
+        3. 取得該元素 樣式屬相? navList.style.right
+        4. 於 css 加入滑動動畫效果
+        -->
+     <script>
+        let navList = document.getElementById("nav-list");
+        function hidenMenu() {
+            navList.style.right = "-400px";
+        }
+
+        function showMenu() {
+            navList.style.right = "0";
+        }
+
+
+     </script>
 
 </body>
 </html>
