--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -118,6 +118,17 @@
         </div>
      </div>
 
+     <!-- campus 校園介紹圖塊 -->
+
+     <!-- facilities 設施列表 -->
+
+     <!-- testimonials 感言, 學生感想區塊 -->
+
+     <!-- call to action 回復區塊 -->
+
+     <!-- footer 頁尾 -->
+
+
      <!-- 四, js 顯示,隱藏 右側選單 
         1. 使用 onclick 觸發事件, 取得 id = nav-list 元素
         2. hidenMenu(), showMenu() 隱藏 與呈現
