GreatStack eduford web 課程 =>  七, div facilities 設施列表

--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -122,8 +122,7 @@
             1. h2 標頭, p 內容文字 => 須讓 div campus 與 文字置中
             2. .row 包覆三個 文字說明卡.campus-col
             3. 文字說明卡.campus-col 包含元素: img , div .layer > h3
-             => 當滑鼠移入 文字說明卡時, layer背景轉紅 , h3標題自下而上呈現
-
+             => 效果: 當滑鼠移入 文字說明卡時, layer背景轉紅 , h3標題自下而上呈現
     -->
 
      <div class="campus">
@@ -155,7 +154,53 @@
         </div>
      </div>
 
-     <!-- facilities 設施列表 -->
+    <!-- 七, div facilities 設施列表 
+            1. h2 標頭, p 內容文字 => 須讓 div campus 與 文字置中
+            2. .row 包覆三個 文字說明卡.campus-col
+            3. 文字說明卡.facilities-col 包含元素: img , h3 , p
+             => 效果: 
+    -->
+    <div class="facilities">
+        <h2>facilities</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Labore delectus nam praesentium voluptatibus sapiente? 
+        </p>
+        <div class="row">
+            <div class="facilities-col">
+                <img src="./images/library.png">
+                <h3>設備1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                </p>
+            </div>
+            <div class="facilities-col">
+                <img src="./images/basketball.png">
+                <h3>設備2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                </p>
+            </div>
+            <div class="facilities-col">
+                <img src="./images/cafeteria.png">
+                <h3>設備3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Labore delectus nam praesentium voluptatibus sapiente? 
+                </p>
+            </div>
+        </div>
+    </div>
+
+
 
      <!-- testimonials 感言, 學生感想區塊 -->
 
