--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -158,7 +158,7 @@
             1. h2 標頭, p 內容文字 => 須讓 div campus 與 文字置中
             2. .row 包覆三個 文字說明卡.campus-col
             3. 文字說明卡.facilities-col 包含元素: img , h3 , p
-             => 效果: 
+             => 效果: 無
     -->
     <div class="facilities">
         <h2>facilities</h2>
@@ -172,6 +172,7 @@
                 <h3>設備1</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <br>
                     Labore delectus nam praesentium voluptatibus sapiente? 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Labore delectus nam praesentium voluptatibus sapiente? 
@@ -201,8 +202,54 @@
     </div>
 
 
-
-     <!-- testimonials 感言, 學生感想區塊 -->
+    <!-- 八, testimonials 感言, 學生感想區塊 
+            1. h2 標頭, p 內容文字 => 須讓 div campus 與 文字置中
+            2. .row 包覆三個 文字說明卡.campus-col
+            3. 文字說明卡.facilities-col 包含元素: img , p, h3 => h3在底部
+             => 效果: 無
+    -->
+    <div class="testimonials">
+        <h2>學員回饋</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Labore delectus nam praesentium voluptatibus sapiente? 
+        </p>
+        <div class="row">
+            <div class="testimonials-col">
+                <img src="images/user1.jpg">
+                <div>
+                    <p>
+                        Labore delectus nam praesentium voluptatibus sapiente? 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Labore delectus nam praesentium voluptatibus sapiente? 
+                    </p>
+                    <h3>學員1</h3>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                </div>
+            </div>
+            <div class="testimonials-col">
+                <img src="images/user2.jpg">
+                <div>
+                    <p>
+                        Labore delectus nam praesentium voluptatibus sapiente? 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Labore delectus nam praesentium voluptatibus sapiente? 
+                    </p>
+                    <h3>學員2</h3>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
      <!-- call to action 回復區塊 -->
 
