--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -251,7 +251,19 @@
     </div>
     
 
-     <!-- call to action 回復區塊 -->
+    <!-- 九, call to action 回復區塊, 如下元素:
+            1. 背景圖片
+            2. h2 副標題 : 立刻報名課程
+            3. a href => 聯絡我們, 超連結
+    -->
+    <div class="cta">
+        <h2>
+            機會難得
+            <br>
+            立刻報名課程,領取優惠!
+        </h2>
+        <a href="" class="hero-btn">聯絡我們</a>
+    </div>
 
      <!-- footer 頁尾 -->
 
