GreatStack eduford web 課程 => 十, footer 頁尾

--- a/GreatStack/eduford/index.html
+++ b/GreatStack/eduford/index.html
@@ -265,7 +265,29 @@
         <a href="" class="hero-btn">聯絡我們</a>
     </div>
 
-     <!-- footer 頁尾 -->
+
+    <!-- 十, footer 頁尾 
+        1. h3標頭, p => 內文
+        2. icon 社群
+    -->
+    <div class="footer">
+        <h3>關於我們</h3>
+        <p>
+            Labore delectus nam praesentium voluptatibus sapiente? 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Labore delectus nam praesentium voluptatibus sapiente? 
+            Labore delectus nam praesentium voluptatibus sapiente? 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </p>
+        <div class="icons">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-messenger"></i>
+            <i class="bi bi-line"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-twitter-x"></i>
+        </div>
+        <p>Made with react by excellent team 2024</p>
+    </div>
 
 
      <!-- 四, js 顯示,隱藏 右側選單 
