牙醫- 元件向上滑動

--- a/web-layout/scroll-show-animate/index.html
+++ b/web-layout/scroll-show-animate/index.html
@@ -16,16 +16,24 @@
     
 </head>
 <body>
+    <h2>動畫測試1 yo</h2>
+
+    <div class="animate-outsite-container">
+        <div class="up animate">
+            外面需 div 容器, 將其包覆
+            <div class="red-box up animate"></div>
+        </div>
+    </div>
 
     <div class="box">
         <h2>動畫測試</h2>
         <div class="container">
-            <div class="img-box up animate">
-                <div class="image up animate"><img src="./assets/slider/food1.png" alt=""></div>
+            <div class="up animate">
+                <div class="up animate"><img src="./assets/slider/food1.png" alt=""></div>
             </div>
         </div>
-        <div class="img-box left animate">
-            <div class="image left animate"><img src="./assets/slider/food2.png" alt=""></div>
+        <div class="left animate">
+            <div class="left animate"><img src="./assets/slider/food2.png" alt=""></div>
         </div>
     </div>
 
