github page 新增作品:  學院補教業 EdufordWebsite

--- a/GreatStack/EdufordWebsite/index.html
+++ b/GreatStack/EdufordWebsite/index.html
@@ -64,13 +64,13 @@
             3. a href .hero-btn 紅色按鈕, 滑鼠移入產生顏色
         -->
         <div class="text-box">
-            <h1>大標題大標題大標題</h1>
+            <h1>思創技術大學</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 <br>
                 Dolore labore ab enim repudiandae ipsum voluptas sunt nihil dicta molestias! 
             </p>
-            <a href="" class="hero-btn">我是紅色按鈕</a>
+            <a href="" class="hero-btn">立刻報名</a>
         </div>
 
      </div>
@@ -89,7 +89,7 @@
 
         <div class="row">
             <div class="course-col">
-                <h3>課程 1</h3>
+                <h3>UI/UX 設計美感培訓</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Illum deserunt qui dicta fugiat inventore molestias expedita vero 
@@ -98,7 +98,7 @@
                 </p>
             </div>
             <div class="course-col">
-                <h3>課程 2</h3>
+                <h3>前後端軟體工程師職涯培訓</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Illum deserunt qui dicta fugiat inventore molestias expedita vero 
@@ -107,7 +107,7 @@
                 </p>
             </div>
             <div class="course-col">
-                <h3>課程 3</h3>
+                <h3>PM專案經理商業學程</h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Illum deserunt qui dicta fugiat inventore molestias expedita vero 
@@ -161,7 +161,7 @@
              => 效果: 無
     -->
     <div class="facilities">
-        <h2>facilities</h2>
+        <h2>設施</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Labore delectus nam praesentium voluptatibus sapiente? 
@@ -169,7 +169,7 @@
         <div class="row">
             <div class="facilities-col">
                 <img src="./images/library.png">
-                <h3>設備1</h3>
+                <h3>圖書館</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     <br>
@@ -180,7 +180,7 @@
             </div>
             <div class="facilities-col">
                 <img src="./images/basketball.png">
-                <h3>設備2</h3>
+                <h3>體育館</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Labore delectus nam praesentium voluptatibus sapiente? 
@@ -190,7 +190,7 @@
             </div>
             <div class="facilities-col">
                 <img src="./images/cafeteria.png">
-                <h3>設備3</h3>
+                <h3>餐飲休息區</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Labore delectus nam praesentium voluptatibus sapiente? 
@@ -223,7 +223,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Labore delectus nam praesentium voluptatibus sapiente? 
                     </p>
-                    <h3>學員1</h3>
+                    <h3>jack</h3>
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -239,7 +239,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Labore delectus nam praesentium voluptatibus sapiente? 
                     </p>
-                    <h3>學員2</h3>
+                    <h3>lucy</h3>
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
