--- a/WDdotWebdesigns/FoodOrdering/index.html
+++ b/WDdotWebdesigns/FoodOrdering/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Ordering Website</title>
+    <title>旋轉餐盤</title>
     <!-- 
         https://www.youtube.com/watch?v=nZvD6u6QdtA
         => 1. 旋轉餐盤
@@ -14,18 +14,55 @@
 </head>
 <body>
 
+    <!-- 
+        #page.site>header.container>nav>.left+.right>.icons
+     -->
+     <div id="page" class="site">
+        <header class="container">
+            <nav>
 
-    <div class="box">
-        <h2>動畫測試</h2>
-        <div class="container">
-            <div class="img-box up animate">
-                <div class="image up animate"><img src="./assets/slider/food1.png" alt=""></div>
-            </div>
-        </div>
-        <div class="img-box left animate">
-            <div class="image left animate"><img src="./assets/slider/food2.png" alt=""></div>
-        </div>
-    </div>
+                <div class="left">
+                    <div class="logo">
+                        <a href="#">
+                            .webFood
+                        </a>
+                    </div>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Menu</a></li>
+                            <li><a href="#">Delivery</a></li>
+                            <li><a href="#">Location</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="right">
+                    <div class="icons">
+                        <a href="#" class="s-trigger">
+                            <i class="ri-search-line"></i>
+                        </a>
+                        <a href="#" class="icart">
+                            <i class="ri-shipping-cart-line"></i>
+                            <span class="number">0</span>
+                        </a>
+                        <a href="#" class="m-trigger mobile-only">
+                            <i class="ri-menu-line"></i>
+                        </a>
+                    </div>
+                </div>
+
+            </nav>
+
+            <form action="" class="search">
+                <div class="container">
+                    <input type="search" placeholder="找找吃的">
+                </div>
+            </form>
+
+        </header>
+     </div>
     
     <!-- 
         main>.hero>.container>h1+span+.slider>.thumb-big+.thumb-nav
