[公司形象網站] 刻板 => header + * 字體 DFPZongYiW9-B5 + nav

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -7,21 +7,61 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <!-- 上方導覽列 start -->
+    <nav>
+        <div class="nav-centent">
+            <div class="logo">
+                <img src="./images/logo/logo-shadow.png">
+            </div>
+    
+            <div class="item-list">
+                <div class="item">
+                    <img src="./images/icon/icon-shank-hand.png" alt="">
+                    <label for="">合作交流</label>
+                </div>
+            </div>
+            <div class="item-list">
+                <div class="item">
+                    <img src="./images/icon/icon-services.png" alt="">
+                    <label for="">服務項目</label>
+                </div>
+            </div>
+            <div class="item-list">
+                <div class="item">
+                    <img src="./images/icon/icon-works.png" alt="">
+                    <label for="">作品集</label>
+                </div>
+            </div>
+            <div class="item-list">
+                <div class="item">
+                    <img src="./images/icon/icon-phone.png" alt="">
+                    <label for="">聯絡我們</label>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- 上方導覽列 end -->
+
     
     <!-- 網頁標頭 過場動畫 start -->
     <section class="header-animation">
-        <h2>AAAAAAAAA</h2>
-        <h1>AI Excellence</h1>
-        <p>我們熱愛學習溝通, 您值得信賴的合作夥版</p>
-        <h2>BBBBBBBBB</h2>
+        <h2 class="move-right">教育旅行咖啡花店</h2>
+        <div class="center-title">
+            <h1>AI Excellence</h1>
+            <p>我們熱愛學習溝通, 您值得信賴的合作夥版</p>
+        </div>
+        <h2 class="move-left">設計SSL安全憑證</h2>
     </section>
     <!-- 網頁標頭 過場動畫 end -->
+
 
     <!-- 報價流程 start -->
     <section class="price-work-flow">
         <h3>報價流程</h3>
     </section>
     <!-- 報價流程 end -->
+
 
     <script src="./script.js"></script>
 
