[公司形象網站] 刻板 => [服務項目] => + * 字體 標題 內文 + 背景圖

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -66,8 +66,8 @@
 
     <!-- 報價流程 start -->
     <section class="price-work-flow">
-        <img src="./images/background/Star1.png" class="left-little-img">
-        <img src="./images/background/Start2.png" class="right-img">
+        <img src="./images/background/bg-left-little-star.png" class="left-little-img">
+        <img src="./images/background/bg-right-star.png" class="right-img">
         <h3>報價流程</h3>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
@@ -149,6 +149,53 @@
         </div>
     </section>
     <!-- 報價流程 end -->
+
+
+    <!-- 服務項目列表 start -->
+    <section class="service-list">
+        <div class="left-block">            
+            <img src="./images/background/bg-left-big-block.png" class="left-img">
+            <div class="item">
+                <h4>專業專案管理顧問服務</h4>
+                <p>
+                    專業專案管理顧問服務，經驗豐富的專案管理專家為您提供網站顧問諮詢，
+                    <br>
+                    協助您從計畫規劃、視覺設計、系統導入、網站上線、
+                    <br>
+                    教育訓練，到後續品質控制與維護，全程陪伴您度過網站建置的各個階段。
+                </p>
+            </div>
+            <div class="item">
+                <h4>響應式網頁設計</h4>
+                <p>
+                    我們使用全站響應式網頁設計，讓您的客戶能夠在任何設備上輕鬆瀏覽您的網站，
+                    <br>
+                    同時您也可以輕鬆在後台編輯響應式內容。
+                </p>
+            </div>
+            <div class="item">
+                <h4>搜尋引擎優化技術</h4>
+                <p>
+                    透過與頂尖的搜尋引擎優化顧問公司的長期合作，我們了解網路搜尋技術，
+                    <br>
+                    並採用Google友善的網頁架構，提供完善的搜尋引擎優化管理工具和技術支援。
+                </p>
+            </div>
+            <div class="item">
+                <h4>長期網站維護</h4>
+                <p>
+                    我們提供網站操作指導和技術諮詢，透過易於理解的操作手冊和專業服務，
+                    <br>
+                    讓您輕鬆上手後台管理，無後顧之憂地維運您的網頁。
+                </p>
+            </div>
+        </div>
+        <div class="right-block">
+            <h3>服務項目</h3>
+            <img src="./images/logo/logo-blue-right-top.png" alt="">
+        </div>
+    </section>
+    <!-- 服務項目 end -->
 
 
     <script src="./script.js"></script>
