[公司形象網站] 刻板 => [作品集] +footer => + * 字體 標題 內文 + 背景圖 (無輪播效果)

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -192,10 +192,70 @@
         </div>
         <div class="right-block">
             <h3>服務項目</h3>
-            <img src="./images/logo/logo-blue-right-top.png" alt="">
+            <img src="./images/logo/logo-blue-right-top.png">
         </div>
     </section>
     <!-- 服務項目 end -->
+
+
+    <!-- 作品集 start -->
+    <section class="portfolio-block">
+        <h3>作品集</h3>
+        <p>
+            我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
+        </p>
+        <!-- 報價流程 之 輪播圖 -->
+        <div class="slide-container">
+            <div class="slide-protfolio-list">
+                <img src="./images/background/bg-computer.png">
+            </div>
+            <div class="slide-tab-list">
+                <label class="tab">汽車</label>
+                <label class="tab">旅行</label>
+                <label class="tab">咖啡店</label>
+                <label class="tab">個人履歷</label>
+                <label class="tab">婚禮企劃</label>
+                <label class="tab">餐廳</label>
+                <label class="tab">應用程式</label>
+                <label class="tab">教育</label>
+                <label class="tab">花店</label>
+                <label class="tab">服飾店</label>
+                <label class="tab">牙醫醫美</label>
+                <label class="tab">電子科技</label>
+            </div>
+        </div>
+    </section>
+    <!-- 作品集 end -->
+
+
+    <!-- 頁尾 start -->
+    <section class="footer">
+        <div class="item-list">
+            <div class="item">
+                <i class="">©</i>
+                <p>
+                    2024 Copyright 艾陞倫有限公司
+                </p>
+            </div>
+            <div class="item">
+                <i class="fas fa-envelope"></i>
+                <p>
+                    excellence1225@gmail.com
+                </p>
+            </div>
+            <div class="item">
+                <i class="fas fa-phone"></i>
+                <p>
+                    09-756-78789
+                </p>
+            </div>
+            <div class="item">
+                <img src="./images/icon/icon-line-green.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- 頁尾 end -->
+
 
 
     <script src="./script.js"></script>
