[公司形象網站] 刻板 => 參數整理 + 今日收尾 + 連結

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -15,32 +15,25 @@
     <!-- 上方導覽列 start -->
     <nav>
         <div class="nav-centent">
-            <div class="logo">
-                <img src="./images/logo/logo-shadow.png">
-            </div>
-    
+            <a href="#" class="logo">
+                <img src="images/logo/logo-shadow.png">
+            </a>
             <div class="item-list">
                 <div class="item">
-                    <img src="./images/icon/icon-shank-hand.png" alt="">
-                    <label for="">合作交流</label>
+                    <img src="./images/icon/icon-shank-hand.png">
+                    <a href="#price-work-flow">合作交流</a>
                 </div>
-            </div>
-            <div class="item-list">
                 <div class="item">
-                    <img src="./images/icon/icon-services.png" alt="">
-                    <label for="">服務項目</label>
+                    <img src="./images/icon/icon-services.png">
+                    <a href="#service-list">服務項目</a>
                 </div>
-            </div>
-            <div class="item-list">
                 <div class="item">
-                    <img src="./images/icon/icon-works.png" alt="">
-                    <label for="">作品集</label>
+                    <img src="./images/icon/icon-works.png">
+                    <a href="#portfolio-block">作品集</a>
                 </div>
-            </div>
-            <div class="item-list">
                 <div class="item">
-                    <img src="./images/icon/icon-phone.png" alt="">
-                    <label for="">聯絡我們</label>
+                    <img src="./images/icon/icon-phone.png">
+                    <a href="#footer">聯絡我們</a>
                 </div>
             </div>
         </div>
@@ -65,7 +58,7 @@
 
 
     <!-- 報價流程 start -->
-    <section class="price-work-flow">
+    <section class="price-work-flow" id="price-work-flow">
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
         <h3>報價流程</h3>
@@ -152,7 +145,7 @@
 
 
     <!-- 服務項目列表 start -->
-    <section class="service-list">
+    <section class="service-list" id="service-list">
         <div class="left-block">            
             <img src="./images/background/bg-left-big-block.png" class="left-img">
             <div class="item">
@@ -199,7 +192,7 @@
 
 
     <!-- 作品集 start -->
-    <section class="portfolio-block">
+    <section class="portfolio-block" id="portfolio-block">
         <h3>作品集</h3>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
@@ -229,7 +222,7 @@
 
 
     <!-- 頁尾 start -->
-    <section class="footer">
+    <section class="footer" id="footer">
         <div class="item-list">
             <div class="item">
                 <i class="">©</i>
