text background color transition => flex => align-items: center;  造成 偽類移動 動畫卡頓 ="=

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -58,10 +58,15 @@
 
 
     <!-- 報價流程 start -->
+    
+    <h3  class="text-color-transition" data-text="報價流程">報價流程</h3>
+    
     <section class="price-work-flow" id="price-work-flow">
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
-        <h3>報價流程</h3>
+        <div class="text-color-transition-container">
+            <h3  class="text-color-transition" data-text="報價流程">報價流程</h3>
+        </div>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
             <br>
