[公司形象網站] 動畫效果 => 變色標頭 => display 造成 bug => fix h3 變色 透明度 bug :(

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -70,7 +70,7 @@
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
         <div class="text-color-transition-container">
-            <h3  class="text-color-transition" data-text="報價流程">報價流程</h3>
+            <h3 class="text-color-transition" data-text="報價流程">報價流程</h3>
         </div>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div class="right-block">
-            <h3>服務項目</h3>
+            <h3 class="text-color-transition" data-text="服務項目">服務項目</h3>
             <img src="./images/logo/logo-blue-right-top.png">
         </div>
     </section>
@@ -212,7 +212,7 @@
 
     <!-- 作品集 start -->
     <section class="portfolio-block" id="portfolio-block">
-        <h3>作品集</h3>
+        <h3 class="text-color-transition" data-text="作品集">作品集</h3>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
         </p>
