--- a/web-layout/background-color-transition/第三方/index.html
+++ b/web-layout/background-color-transition/第三方/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
     <link 
         rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js">
+        href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js">
 
         <!-- 
             https://www.youtube.com/watch?v=VeTwNnZUPlw
