[公司形象網站] 動畫效果 => 網頁標頭 , scroll, 水平位移動 => 需優化

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -51,14 +51,16 @@
     
     <!-- 網頁標頭 過場動畫 start -->
     <section class="header-animation">
-        <div class="move-right">
+        <div class="move-from-right">
             <h2>教育旅行咖啡花店</h2>
+            <div class="move-from-right-padding"></div>
         </div>
         <div class="center-title">
             <h1>AI Excellence</h1>
             <p>我們熱愛學習溝通, 您值得信賴的合作夥版</p>
         </div>
-        <div class="move-left">
+        <div class="move-from-left">
+            <div class="move-from-left-padding"></div>
             <h2>設計SSL安全憑證</h2>
         </div>
     </section>
