[公司形象網站] 動畫效果 => 彈性效果 => 移動底線區塊動畫 => span 藍色底線

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -14,28 +14,31 @@
 
     <!-- 上方導覽列 start -->
     <nav>
-        <div class="nav-centent">
-            <a href="#" class="logo">
-                <img src="images/logo/logo-shadow.png">
-            </a>
-            <div class="item-list">
-                <div class="item">
-                    <img src="./images/icon/icon-shank-hand.png">
-                    <a href="#price-work-flow">合作交流</a>
-                </div>
-                <div class="item">
-                    <img src="./images/icon/icon-services.png">
-                    <a href="#service-list">服務項目</a>
-                </div>
-                <div class="item">
-                    <img src="./images/icon/icon-works.png">
-                    <a href="#portfolio-block">作品集</a>
-                </div>
-                <div class="item">
-                    <img src="./images/icon/icon-phone.png">
-                    <a href="#footer">聯絡我們</a>
+        <div class="text-bounce-button-container">
+            <div class="nav-centent">
+                <a href="#" class="logo">
+                    <img src="images/logo/logo-shadow.png">
+                </a>
+                <div class="item-list">
+                    <div class="item">
+                        <img src="./images/icon/icon-shank-hand.png">
+                        <a href="#price-work-flow">合作交流</a>
+                    </div>
+                    <div class="item">
+                        <img src="./images/icon/icon-services.png">
+                        <a href="#service-list">服務項目</a>
+                    </div>
+                    <div class="item">
+                        <img src="./images/icon/icon-works.png">
+                        <a href="#portfolio-block">作品集</a>
+                    </div>
+                    <div class="item">
+                        <img src="./images/icon/icon-phone.png">
+                        <a href="#footer">聯絡我們</a>
+                    </div>
                 </div>
             </div>
+            <span class="text-bounce-button"></span>
         </div>
     </nav>
     <!-- 上方導覽列 end -->
