[公司形象網站] 導覽列 結構調整 => 位移彈動

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -20,19 +20,19 @@
                     <img src="images/logo/logo-shadow.png">
                 </a>
                 <div class="item-list">
-                    <div class="item">
+                    <div class="item" id="nav-item1">
                         <img src="./images/icon/icon-shank-hand.png">
                         <a href="#price-work-flow">合作交流</a>
                     </div>
-                    <div class="item">
+                    <div class="item" id="nav-item2">
                         <img src="./images/icon/icon-services.png">
                         <a href="#service-list">服務項目</a>
                     </div>
-                    <div class="item">
+                    <div class="item" id="nav-item3">
                         <img src="./images/icon/icon-works.png">
                         <a href="#portfolio-block">作品集</a>
                     </div>
-                    <div class="item">
+                    <div class="item" id="nav-item4">
                         <img src="./images/icon/icon-phone.png">
                         <a href="#footer">聯絡我們</a>
                     </div>
