公司形象網站] 動畫效果 => 彈性效果 => 移動底線區塊動畫 =>  重構出效果

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -14,7 +14,7 @@
 
     <!-- 上方導覽列 start -->
     <nav>
-        <div class="text-bounce-button-container">
+        <div class="text-bounce-bottom-container">
             <div class="nav-centent">
                 <a href="#" class="logo">
                     <img src="images/logo/logo-shadow.png">
@@ -38,7 +38,10 @@
                     </div>
                 </div>
             </div>
-            <span class="text-bounce-button"></span>
+            <!-- 藍色彈性底線 -->
+            <div class="text-bounce-bottom-box">
+                <div class="text-bounce-bottom"></div>
+            </div>
         </div>
     </nav>
     <!-- 上方導覽列 end -->
