[公司形象網站] 刻板 => 優化 h1, h2, h3 與 slogan 結構 + nav小優化

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="text-bounce-bottom-container">
             <div class="nav-centent">
-                <a href="#" class="logo">
+                <a href="#" id="logo" class="logo">
                     <img src="images/logo/logo-shadow.png">
                 </a>
                 <div class="item-list">
@@ -50,16 +50,16 @@
     <!-- 網頁標頭 過場動畫 start -->
     <section class="header-animation">
         <div class="move-from-right">
-            <h2>教育旅行咖啡花店</h2>
+            <div class="slogan-big-move">教育旅行咖啡花店</div>
             <div class="move-from-right-padding"></div>
         </div>
         <div class="center-title">
             <h1>AI Excellence</h1>
-            <p>我們熱愛學習溝通, 您值得信賴的合作夥版</p>
+            <p class="slogan-little">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
         </div>
         <div class="move-from-left">
             <div class="move-from-left-padding"></div>
-            <h2>設計SSL安全憑證</h2>
+            <div class="slogan-big-move">設計SSL安全憑證</div>
         </div>
     </section>
     <!-- 網頁標頭 過場動畫 end -->
@@ -70,7 +70,7 @@
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
         <div class="text-color-transition-container">
-            <h3 class="text-color-transition" data-text="報價流程">報價流程</h3>
+            <h2 class="text-color-transition" data-text="報價流程">報價流程</h2>
         </div>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
@@ -168,7 +168,7 @@
         <div class="left-block">            
             <img src="./images/background/bg-left-big-block.png" class="left-img">
             <div class="item">
-                <h4>專業專案管理顧問服務</h4>
+                <h3>專業專案管理顧問服務</h3>
                 <p>
                     專業專案管理顧問服務，經驗豐富的專案管理專家為您提供網站顧問諮詢，
                     <br>
@@ -178,7 +178,7 @@
                 </p>
             </div>
             <div class="item">
-                <h4>響應式網頁設計</h4>
+                <h3>響應式網頁設計</h3>
                 <p>
                     我們使用全站響應式網頁設計，讓您的客戶能夠在任何設備上輕鬆瀏覽您的網站，
                     <br>
@@ -186,7 +186,7 @@
                 </p>
             </div>
             <div class="item">
-                <h4>搜尋引擎優化技術</h4>
+                <h3>搜尋引擎優化技術</h3>
                 <p>
                     透過與頂尖的搜尋引擎優化顧問公司的長期合作，我們了解網路搜尋技術，
                     <br>
@@ -194,7 +194,7 @@
                 </p>
             </div>
             <div class="item">
-                <h4>長期網站維護</h4>
+                <h3>長期網站維護</h3>
                 <p>
                     我們提供網站操作指導和技術諮詢，透過易於理解的操作手冊和專業服務，
                     <br>
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div class="right-block">
-            <h3 class="text-color-transition" data-text="服務項目">服務項目</h3>
+            <h2 class="text-color-transition" data-text="服務項目">服務項目</h2>
             <img src="./images/logo/logo-blue-right-top.png">
         </div>
     </section>
@@ -212,7 +212,7 @@
 
     <!-- 作品集 start -->
     <section class="portfolio-block" id="portfolio-block">
-        <h3 class="text-color-transition" data-text="作品集">作品集</h3>
+        <h2 class="text-color-transition" data-text="作品集">作品集</h2>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
         </p>
